   naming standards. b)now implements IEnrichmentReadConnector and can be used
   with enrichment processors.  
 
 * AbstractPollingReadConnector: the 'reconnect' property renamed to a more descriptive
   'reconnectDelegateBetweenPolls'. Changes in adaptors' configs that use 
   LoopingPollingReadConnectors or CronnablePollingReadConnectors need to be made
   accordingly. 

Processors
==========

 * GenericEnrichmentProcessor - new 'discardInput' property allows for treating input 
   message merely as a source of parameters for the enrichment read connector.

 * ScriptProcessor - added binding to allow scripts to access logging facility.
 
Examples
========

 * Added example of a file write connector with dynamically derived file names
   (example\spring\connectors\file\file-dynamic.xml).
   
 * Added example of a file write connector that rolls over output files
   (example\spring\connectors\file\file-rollover.xml).  
   
 * Added example of a Web service enrichment processor
   (example\spring\processors\enrichment\soap\enrich-processor.xml).    

Miscellaneous
=============

 * SpringAdaptor will automatically configure and register an Adaptor and associated Router
   in the Spring context if they are not explicitly defined. This allows simple Adaptor
   configurations to be defined just by declaring an ordered set of IComponents.
   A bean defined with an id of ExceptionProcessor will be automatically set as the Router's 
   exceptionProcessor.
   
Bug Fixes
=========

SC69: Changes in removal of JVM shutdown hook.

SC73: Correct recognition of JVM 1.6 in registration.


=================================================
openadaptor3 production 3.4.2 Release Notes

See licence.txt for Licence information.
=================================================

Date: 18th July 2008
Author: openadaptor Core Team

openadaptor 3.4.2
=======

Connectors
==========

 * JDBCReadConnector & JDBCWriteConnector - preambleSQL and postambleSQL properties